--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -4,11 +4,8 @@
 	position: fixed;
 	top:40%;
 	right: 0px;
-	background: url("../images/icon (1).png") -367px 0px;
 }
-.fix:hover{
-	background: url("../images/icon (1).png") -333px 0px;
-}
+
 header{
 	box-shadow: 0px 2px 10px #f2f2f2; 
 }
@@ -63,23 +60,24 @@ main>ul>li{
 	font-size: 13px;
 	float: left;
 	position: relative;
+	left:160px;
 	color:#999999; 
 }
 .c1 .one::after{
 	content: "";
 	width: 124px;
-	height: 10px;
+	height: 12px;
 	position: absolute;
-	background: url("../uploads/signup.png")no-repeat 0px -99px;
+	background: url("../images/signup.png")no-repeat 0px -127px;
 	top: 6px;
 	left: 63px;
 }
 .c2 .one::after{
 	content: "";
 	width: 124px;
-	height: 10px;
+	height: 12px;
 	position: absolute;
-	background: url("../uploads/signup.png")no-repeat 0px -99px;
+	background: url("../images/signup.png")no-repeat 0px -127px;
 	top: 6px;
 	left: 63px;
 }
@@ -103,73 +101,56 @@ main>ul .green1{
 	color: white;
 	background: url("../uploads/signup.png")no-repeat 0px -199px;
 }
+main>ul .right{
+	background: url("../uploads/signup.png")no-repeat 0px 0px;
+}
 .green2{
 	color: #33bb44;
 }
-main>.many{
-	width:397px;
-	height: 50px;
-	border: 1px solid #dddddd;
-	margin-top: 54px;
-	position: relative;
-}
-.many>input{
-	width:269px;
-	height: 50px;
-	padding-left:21px;
+main>form input{
+	width: 398px;
+	height: 55px;
 	outline: none;
 	border: none;
-	float: right;
+	border: 1px solid #e7e7e7;
+	padding-left: 128px;
 }
-.many>.address{
-	width: 104px;
-	height: 50px;
-	border-right: 1px solid #dddddd;
-	float: left;
-	text-align: center;
-	position: relative;
-	z-index: 9;
+main>form>ul .emil{
+	width: 150px;
+	padding-right:120px;
 }
-main>.many .border{
-	border:1px solid #000;
+main>form li{
+	width: 398px;
+	height: 55px;
+	position: relative;	
+	margin-top: 31px;
 }
-.address>span{
-	width: 41px;	
-	line-height: 50px;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	display: inherit;
-	float: left;
-}
-.address>.second::after{
-	content: "";
-	width: 16px;
-	height:  12px;
-	position: absolute;
-	top:20px;
-	right: 0px;
-	background: url("../images/icon (1).png") no-repeat -2px -156px;
-}
-main>.bt1{
-	width: 397px;
-	height: 50px;
-	margin-top: 35px;
-	border: 1px solid #dddddd;
+
+main>form button{
+	width: 398px;
+	height: 55px;
+	margin-top: 31px;
 	outline: none;
-	background: #fff;
-}
-main>.bt1:hover{
-	border: 1px solid #000;
-}
-main>.bt2{
-	width: 397px;
-	height: 50px;
-	margin-top: 55px;
-	background: #e2231a;
+	border: none;
+	background:#e2231a;
 	color: #fff;
-	outline: none;
-	border: 0px;
+}
+form{
+	margin-top: 24px;
+	
+}
+main>form span{
+	text-align: center;
+    line-height: 55px;
+	font-size: 16px;
+    width: 128px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+main>form .n1{
+	left:279px; 
+	width: 120px;
 }
 main>ol{
 	width: 397px;
@@ -191,7 +172,7 @@ ol>li .people{
 	position: absolute;
 	top:0px;
 	left: 0px;
-	background: url("../uploads/signup.png") no-repeat 0px -160px;
+	background: url("../images/signup.png") no-repeat 0px -160px;
 }
 ol>li .earth{
 	width: 26px;
@@ -199,88 +180,28 @@ ol>li .earth{
 	position: absolute;
 	top:0px;
 	left: 0px;
-	background: url("../uploads/signup.png") no-repeat -39px -160px;
+	background: url("../images/signup.png") no-repeat -39px -160px;
 }
 main>ol>li:hover{
 	color: red;
-} 
-.address>div{
-	width: 313px;
-	height: 273px;
-	padding: 15px;
-	box-shadow: 0px 0px 8px #888888;
-	background: #fff;
+}
+form p{
+	color: #ff9911;
+	padding-left: 22px;
+	font-size: 12px;
 	position: absolute;
-	top:55px;
-
-}
-.address>div>input{
-	width: 274px;
-	height: 42px;
-	padding-left: 42px;
-	background: #f7f7f7;
-	outline: none;
-	border:none;
-	border:1px solid #dddddd;
-}
-.address>div>span{
-	width: 16px;
-	height: 16px;
-	background: url("../images/search-icon.png");
-	position: absolute;
-	top:30px;
-	left: 30px;
-}
-.address>div>p{
-	margin-top: 15px;
-	text-align: left;
-}
-.address .red{
-	color: red;
-}
-.address>div>ol{
-	height: 130px;
-	overflow: auto;
-	overflow-x:hidden; 
-}
-.group-list::-webkit-scrollbar {
-  width: 8px;
-}
-.group-list::-webkit-scrollbar-thumb {
-  background-color: #d9d9d9;
-}
-.address>div ol{
 	margin-top: 4px;
-	line-height: 36px;
+	display: none;
 }
-.address>div ol>li{
-	float: left;
-	width: 260px;
-	padding-left: 34px;	
-	position: relative;
-}
-.usually li>span:nth-of-type(1){
-	width: 20px;
-	height: 16px;
+form ul>p>span{
+	width: 17px;
+	height: 17px;
 	position: absolute;
-	float: left;
-	top: 10px;
-	left: 0px;		
+	top:0px;
+	left: 0px;
+	background: url("../images/icon (1).png") no-repeat -16px -99px;
 }
-.A li>span:nth-of-type(1){
-	width: 20px;
-	height: 16px;
-	position: absolute;
-	float: left;
-	top: 10px;
-	left: 0px;		
-}
-.address ol span:nth-of-type(2){
-	float: left;
-}
-.address ol span:nth-of-type(3){
-	float: right;
-}
+
 
 footer{
 	height: 145px;
@@ -314,39 +235,4 @@ footer p:nth-of-type(1){
 }
 footer p:nth-of-type(2){
 	margin-top: 17px;
-}
-
-main>p.tip{
-	position: absolute;
-}
-.tip2,.tip3,.tip4{
-	margin: 6px;
-	font-size: 12px;
-	color: #ff9911;
-	padding-left: 16px;
-	position: relative;
-	/* display: none; */
-}
-.tip1{
-	color:#dddddd;
-}
-.tip3{
-	display: none;
-}
-.tip2::before,.tip3::before,.tip4::before{
-	content: "";
-	width: 17px;
-	height: 17px;
-	position: absolute;
-	top: 0px;
-	left: -1px;
-	background: url("../images/icon (1).png")no-repeat -16px -99px;
-}
-.tip-right{
-	width: 17px;
-	height: 17px;
-	position: absolute;
-	top: 17px;
-	right: 20px;
-	background: url("../images/icon (1).png")no-repeat 0px -117px;
 }
